GeoArea and InputDate classes added to Entities.csproj.

--- a/Project/Entities/Entities.csproj
+++ b/Project/Entities/Entities.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRepository.cs" />
+    <Compile Include="Models\GeoArea.cs" />
+    <Compile Include="Models\InputDate.cs" />
     <Compile Include="Models\PowerConsumptionData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
