Minor changes aplied to DataAcces and removed InitialMigrations migrations.

--- a/Project/DataAccess/DataAccess.csproj
+++ b/Project/DataAccess/DataAccess.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbContextProvider.cs" />
+    <Compile Include="PowerConsumptionDbContextProvider.cs" />
     <Compile Include="IDbContextProvider.cs" />
     <Compile Include="PowerConsumptionMigrations\201805222317128_CreateInitialModels.cs" />
     <Compile Include="PowerConsumptionMigrations\201805222317128_CreateInitialModels.Designer.cs">
