--- a/Project/DataAccess/App.config
+++ b/Project/DataAccess/App.config
@@ -13,6 +13,6 @@
   <connectionStrings>
     <!-- Underneath is a custom comment.-->
     <!-- For more information on Sql connection strings: https://msdn.microsoft.com/en-gb/library/system.data.sqlclient.sqlconnection.connectionstring.aspx -->
-    <add name="PowerConsumptionDbContext" connectionString="data source=KARAKLIC\SQLEXPRESS; initial catalog=RES_PROJECT; integrated security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="PowerConsumptionDbContext" connectionString="data source=DESKTOP-A7U7NVS\SQLEXPRESS; initial catalog=RES_PROJECT; integrated security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
