--- a/Project/DataAccess/DataAccess.csproj
+++ b/Project/DataAccess/DataAccess.csproj
@@ -47,16 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PowerConsumptionDbContextProvider.cs" />
-    <Compile Include="IDbContextProvider.cs" />
+    <Compile Include="ModelRepositoryInterfaces\IGeoAreaRepository.cs" />
+    <Compile Include="ModelRepositoryInterfaces\IPowerConsumptionDataRepository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="ModelRepositories\GeoAreaRepository.cs" />
     <Compile Include="PowerConsumptionMigrations\201805222317128_CreateInitialModels.cs" />
     <Compile Include="PowerConsumptionMigrations\201805222317128_CreateInitialModels.Designer.cs">
       <DependentUpon>201805222317128_CreateInitialModels.cs</DependentUpon>
     </Compile>
     <Compile Include="PowerConsumptionMigrations\Configuration.cs" />
     <Compile Include="ModelRepositories\PowerConsumptionDataRepository.cs" />
-    <Compile Include="PowerConsumptionDbContext.cs" />
+    <Compile Include="DatabaseContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
