--- a/Project/FileReader/FileReader.csproj
+++ b/Project/FileReader/FileReader.csproj
@@ -40,15 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvLogger.cs" />
     <Compile Include="CsvReader.cs" />
+    <Compile Include="DatabaseWriter.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IReader.cs" />
     <Compile Include="IWatcher.cs" />
+    <Compile Include="IWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TxtLogger.cs" />
     <Compile Include="Watcher.cs" />
-    <Compile Include="XmlLogger.cs" />
     <Compile Include="XmlReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
