--- a/Project/FileReader/FileReader.csproj
+++ b/Project/FileReader/FileReader.csproj
@@ -40,16 +40,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvReader.cs" />
-    <Compile Include="DatabaseWriter.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="IReader.cs" />
-    <Compile Include="IWatcher.cs" />
-    <Compile Include="IWriter.cs" />
+    <Compile Include="ReadModel\ReadDataObject.cs" />
+    <Compile Include="Readers\CsvReader.cs" />
+    <Compile Include="Writers\DatabaseWriter.cs" />
+    <Compile Include="Interfaces\ILogger.cs" />
+    <Compile Include="Interfaces\IReader.cs" />
+    <Compile Include="Interfaces\IWatcher.cs" />
+    <Compile Include="Interfaces\IWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TxtLogger.cs" />
+    <Compile Include="Loggers\TxtLogger.cs" />
     <Compile Include="Watcher.cs" />
-    <Compile Include="XmlReader.cs" />
+    <Compile Include="Readers\XmlReader.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{6bc85d10-2eaa-4705-8368-d711e94f3dde}</Project>
+      <Name>Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
