--- a/Project/FileReader/FileReader.csproj
+++ b/Project/FileReader/FileReader.csproj
@@ -40,16 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvReader.cs" />
-    <Compile Include="DatabaseWriter.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="IReader.cs" />
-    <Compile Include="IWatcher.cs" />
-    <Compile Include="IWriter.cs" />
+    <Compile Include="Interfaces\ILogger.cs" />
+    <Compile Include="Interfaces\IReader.cs" />
+    <Compile Include="Interfaces\IWatcher.cs" />
+    <Compile Include="Interfaces\IWriter.cs" />
+    <Compile Include="Loggers\TxtLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TxtLogger.cs" />
+    <Compile Include="Readers\CsvReader.cs" />
+    <Compile Include="Readers\XmlReader.cs" />
+    <Compile Include="ReadModel\ReadDataObject.cs" />
     <Compile Include="Watcher.cs" />
-    <Compile Include="XmlReader.cs" />
+    <Compile Include="Writers\DatabaseWriter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
