Fixed conflicts in project loading: FileReader.csproj.

--- a/Project/FileReader/FileReader.csproj
+++ b/Project/FileReader/FileReader.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ReadModel\ReadDataObject.cs" />
     <Compile Include="Readers\CsvReader.cs" />
+    <Compile Include="ReadModel\ReadDataType.cs" />
     <Compile Include="Writers\DatabaseWriter.cs" />
     <Compile Include="Interfaces\ILogger.cs" />
     <Compile Include="Interfaces\IReader.cs" />
@@ -49,11 +49,14 @@
     <Compile Include="Interfaces\IWriter.cs" />
     <Compile Include="Loggers\TxtLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Readers\CsvReader.cs" />
     <Compile Include="Readers\XmlReader.cs" />
-    <Compile Include="ReadModel\ReadDataObject.cs" />
     <Compile Include="Watcher.cs" />
-    <Compile Include="Writers\DatabaseWriter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{6bc85d10-2eaa-4705-8368-d711e94f3dde}</Project>
+      <Name>Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
