--- a/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
+++ b/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
@@ -66,10 +66,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\DatabaseContextTests.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\GeoAreaDataRepositoryTests.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\PowerConsumptionDataRepositoryTests.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\UnitOfWorkTests.cs" />
+    <Compile Include="PowerConsumptionUnitTests.DataAccess\DatabaseContextTest.cs" />
+    <Compile Include="PowerConsumptionUnitTests.DataAccess\GeoAreaDataRepositoryTest.cs" />
+    <Compile Include="PowerConsumptionUnitTests.DataAccess\PowerConsumptionDataRepositoryTest.cs" />
+    <Compile Include="PowerConsumptionUnitTests.DataAccess\UnitOfWorkTest.cs" />
+    <Compile Include="PowerConsumptionUnitTests.FileReader\TxtLoggerTest.cs" />
+    <Compile Include="PowerConsumptionUnitTests.FileReader\XmlReaderTest.cs" />
+	<Compile Include="PowerConsumptionUnitTests.DataProxy\CacheManagerTest.cs"/>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,11 +84,20 @@
       <Project>{1193F3FE-381E-4A9D-A466-0A70FCB70084}</Project>
       <Name>DataAccess</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DataProxy\DataProxy.csproj">
+      <Project>{9a7c9b3e-11df-4e92-8c47-3e83cee5dd42}</Project>
+      <Name>DataProxy</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Entities\Entities.csproj">
       <Project>{6BC85D10-2EAA-4705-8368-D711E94F3DDE}</Project>
       <Name>Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FileReader\FileReader.csproj">
+      <Project>{d7f96361-c42e-46e5-badc-657b266389a4}</Project>
+      <Name>FileReader</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
