--- a/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
+++ b/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
@@ -64,16 +64,15 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-
     <Compile Include="PowerConsumptionUnitTests.DataAccess\DatabaseContextTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.DataAccess\GeoAreaDataRepositoryTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.DataAccess\PowerConsumptionDataRepositoryTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.DataAccess\UnitOfWorkTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\TxtLoggerTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\XmlReaderTest.cs" />
-	<Compile Include="PowerConsumptionUnitTests.DataProxy\CacheManagerTest.cs"/>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -98,7 +97,9 @@
       <Name>FileReader</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PowerConsumptionUnitTests.DataProxy\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
