Added preliminary documentation and database file. Added comments to reader tests.

--- a/Project/UI/Web.config
+++ b/Project/UI/Web.config
@@ -69,6 +69,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="data source=DESKTOP-A7U7NVS\SQLEXPRESS; initial catalog=RES_PROJECT; integrated security=SSPI" providerName="System.Data.SqlClient"/>
+    <!-- Underneath is a custom comment.-->
+    <!-- For more information on Sql connection strings: https://msdn.microsoft.com/en-gb/library/system.data.sqlclient.sqlconnection.connectionstring.aspx -->
+    <add name="DatabaseContext" connectionString="data source=KARAKLIC\SQLEXPRESS; initial catalog=RES_PROJECT; integrated security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
