--- a/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
+++ b/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
@@ -67,11 +67,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\DatabaseContextTest.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\GeoAreaDataRepositoryTest.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\PowerConsumptionDataRepositoryTest.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataAccess\UnitOfWorkTest.cs" />
-    <Compile Include="PowerConsumptionUnitTests.DataProxy\CacheManagerTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\TxtLoggerTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\XmlReaderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,7 +93,9 @@
       <Name>FileReader</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PowerConsumptionUnitTests.DataProxy\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
