--- a/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
+++ b/Project/PowerConsumptionUnitTests/PowerConsumptionUnitTests.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PowerConsumptionUnitTests.DataProxy\PowerConsumptionCachedDataTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\TxtLoggerTest.cs" />
     <Compile Include="PowerConsumptionUnitTests.FileReader\XmlReaderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -93,9 +94,7 @@
       <Name>FileReader</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PowerConsumptionUnitTests.DataProxy\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
